# src/app/mcpserver/pages/mcpserver-search/mcpserver-search.columns.ts
@@ -4,14 +4,48 @@ export const mcpserverSearchColumns: DataTableColumn[] = [
   {
     columnType: ColumnType.STRING,
     id: 'name',
-    nameKey: 'HELLO_SEARCH.RESULTS.HELLO',
+    nameKey: 'MCP_SERVER_SEARCH.RESULTS.NAME',
     filterable: true,
     sortable: true,
     predefinedGroupKeys: [
-      'HELLO_SEARCH.PREDEFINED_GROUP.DEFAULT',
-      'HELLO_SEARCH.PREDEFINED_GROUP.EXTENDED',
-      'HELLO_SEARCH.PREDEFINED_GROUP.FULL'
+      'MCP_SERVER_SEARCH.PREDEFINED_GROUP.DEFAULT',
+      'MCP_SERVER_SEARCH.PREDEFINED_GROUP.EXTENDED',
+      'MCP_SERVER_SEARCH.PREDEFINED_GROUP.FULL'
     ]
-  }
+  },
+  {
+    columnType: ColumnType.STRING,
+    id: 'description',
+    nameKey: 'MCP_SERVER_SEARCH.RESULTS.DESCRIPTION',
+    filterable: true,
+    sortable: true,
+    predefinedGroupKeys: [
+      'MCP_SERVER_SEARCH.PREDEFINED_GROUP.DEFAULT',
+      'MCP_SERVER_SEARCH.PREDEFINED_GROUP.EXTENDED',
+      'MCP_SERVER_SEARCH.PREDEFINED_GROUP.FULL'
+    ]
+  },
+  {
+    columnType: ColumnType.STRING,
+    id: 'protocol',
+    nameKey: 'MCP_SERVER_SEARCH.RESULTS.PROTOCOL',
+    filterable: true,
+    sortable: true,
+    predefinedGroupKeys: [
+      'MCP_SERVER_SEARCH.PREDEFINED_GROUP.EXTENDED',
+      'MCP_SERVER_SEARCH.PREDEFINED_GROUP.FULL'
+    ]
+  },
+  {
+    columnType: ColumnType.STRING,
+    id: 'url',
+    nameKey: 'MCP_SERVER_SEARCH.RESULTS.URL',
+    filterable: true,
+    sortable: true,
+    predefinedGroupKeys: [
+      'MCP_SERVER_SEARCH.PREDEFINED_GROUP.EXTENDED',
+      'MCP_SERVER_SEARCH.PREDEFINED_GROUP.FULL'
+    ]
+  },
 ]
 // ACTION S6: Define search results columns: https://onecx.github.io/docs/nx-plugins/current/general/getting_started/search/configure-search-results.html#action-6
