# src/app/mcpserver/pages/mcpserver-search/mcpserver-search.parameters.ts
@@ -4,6 +4,8 @@ import { z, ZodTypeAny } from 'zod'
 export const mcpserverSearchCriteriasSchema = z.object({
   name: z.string().optional(),
   description: z.string().optional(),
+  url: z.string().optional(),
+  protocol: z.string().optional(),
   // ACTION S2: Please define the members for your mcpserverSearchCriteriasSchema here
   // https://onecx.github.io/docs/nx-plugins/current/general/getting_started/search/configure-search-criteria.html#action-2
 } satisfies Partial<Record<keyof SearchMCPServerRequest, ZodTypeAny>>)
